# dpl-backend

./: .dockerignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml  requirements.txt  startup.sh
accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/management/commands/: create_superuser_env.py
accounts/migrations/: 0001_initial.py
bmatches/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
bmatches/migrations/: 0001_initial.py
config/: settings.py  urls.py
matches/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
matches/migrations/: 0001_initial.py
